trying some stuff

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 			<label for="categorySelect">Y Scale:</label>		
 			<select class="axis_select" id="yScaleSelect" onchange="onYScaleChanged()"></select>				
 	</div>
-	<div style="position: absolute; left: 475px; bottom: 125px;">		
+	<div style="position: absolute; left: 0px; top: 300px;">		
 		<label for="categorySelect">X Scale:</label>		
 		<select class="axis_select" id="xScaleSelect" onchange="onXScaleChanged()"></select>
 	</div>
-	<div style="position: absolute; left: 0px; bottom: 125px;">		
+	<div style="position: absolute; left: 0px; top: 350px;">		
 		<label for="categorySelect">Baseline Country:</label>		
 		<select class="countrySelect" id="countrySelect" onchange="onBaselineChange()"></select>
 	</div>
 	<div style="margin-left: 425px;">
-		<svg width="500" height="500" style="border: 1px solid #777;">
+		<svg width="1000" height="1000" style="border: 1px solid #777;">
 		</svg>
 	</div>
     
