baseline is fixed :)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</div>
 	<div style="position: absolute; left: 0px; top: 350px;">		
 		<label for="categorySelect">Baseline Country:</label>		
-		<select class="countrySelect" id="countrySelect" onchange="onBaselineChange()"></select>
+		<select class="country_select" id="countrySelect" onchange="onBaselineChange()"></select>
 	</div>
 	<div style="margin-left: 425px;">
 		<svg width="1000" height="1000" style="border: 1px solid #777;">
