fixed y axis change

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<input type="checkbox" name="options" autocomplete="off" onchange="update_Xaxis()">Log X scale
 		</label>
 		<label class="btn btn-secondary"  data-type="states">
-			<input type="checkbox" name="options" autocomplete="off">Log Y scale
+			<input type="checkbox" name="options" autocomplete="off"onchange="update_Yaxis()">Log Y scale
 		</label>
 	</div>
 	<div id="main">
