--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
 		<select class="country_select" id="countrySelect" onchange="onBaselineChange()"></select>
 	</div>
 	<div style="margin-left: 425px;">
-		<svg width="1000" height="1000" style="border: 1px solid #777;">
-		</svg>
+		<svg id = "scatter_plot" width="500" height="500" style="border: 1px solid #777;"></svg>
 	</div>
-    
+	<div style="position: absolute; right: -50px; top: 0px;" id="my_dataviz" class = "parallel_coords" >
+		<select class="axis_selector" id="axis_selector_1" onchange="onSelectorChange()"></select>
+		<select class="axis_selector" id="axis_selector_2" onchange="onSelectorChange()"></select>
+		<select class="axis_selector" id="axis_selector_3" onchange="onSelectorChange()"></select>
+		<select class="axis_selector" id="axis_selector_4" onchange="onSelectorChange()"></select>
+		<select class="axis_selector" id="axis_selector_5" onchange="onSelectorChange()"></select>
+		<select class="axis_selector" id="axis_selector_6" onchange="onSelectorChange()"></select>
+	</div>
 </body>
 <script src="//d3js.org/d3.v5.min.js"></script>
 <script src="./d3-tip.js"></script>
