--- a/heatmap.html
+++ b/heatmap.html
@@ -1,67 +1,76 @@
-<!DOCTYPE html>
-<meta charset="utf-8" />
-
 <!-- Load d3.js -->
 <script src="https://d3js.org/d3.v4.js"></script>
 
 <!-- Create a div where the graph will take place -->
 <div id="my_dataviz"></div>
 
-<script>
-  // set the dimensions and margins of the graph
-  var margin = { top: 30, right: 30, bottom: 30, left: 30 },
-    width = 450 - margin.left - margin.right,
-    height = 450 - margin.top - margin.bottom;
+<!-- Load color palettes -->
+<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
-  // append the svg object to the body of the page
+<script>
+  var margin = { top: 50, right: 50, bottom: 100, left: 100 },
+    width = 800 - margin.left - margin.right,
+    height = 600 - margin.top - margin.bottom;
+
+  // Append the svg object to the body of the page
   var svg = d3
-    .select("#my_dataviz")
+    .select("body")
     .append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
     .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-  // Labels of row and columns
-  var myGroups = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J"];
-  var myVars = ["v1", "v2", "v3", "v4", "v5", "v6", "v7", "v8", "v9", "v10"];
+  // Load the data from the CSV file
+  d3.csv("CLEANED_assignment_3_dataset.csv", function (data) {
+    // Extract the columns we're interested in
+    var countries = data.map(function (d) {
+      return d.Country;
+    });
+    var years = data.map(function (d) {
+      return d.Year;
+    });
+    var values = data.map(function (d) {
+      return +d["GDP ($ USD billions PPP)"];
+    });
 
-  // Build X scales and axis:
-  var x = d3.scaleBand().range([0, width]).domain(myGroups).padding(0.01);
-  svg
-    .append("g")
-    .attr("transform", "translate(0," + height + ")")
-    .call(d3.axisBottom(x));
+    // Define the color scale
+    var colorScale = d3
+      .scaleSequential()
+      .interpolator(d3.interpolateBlues)
+      .domain(d3.extent(values));
 
-  // Build X scales and axis:
-  var y = d3.scaleBand().range([height, 0]).domain(myVars).padding(0.01);
-  svg.append("g").call(d3.axisLeft(y));
+    // Create the heatmap
+    var heatmap = svg
+      .selectAll()
+      .data(data)
+      .enter()
+      .append("rect")
+      .attr("x", function (d) {
+        return years.indexOf(d.Year) * (width / years.length);
+      })
+      .attr("y", function (d) {
+        return countries.indexOf(d.Country) * (height / countries.length);
+      })
+      .attr("width", width / years.length)
+      .attr("height", height / countries.length)
+      .style("fill", function (d) {
+        return colorScale(+d["GDP ($ USD billions PPP)"]);
+      });
 
-  // Build color scale
-  var myColor = d3.scaleLinear().range(["white", "#69b3a2"]).domain([1, 100]);
-
-  //Read the data
-  d3.csv(
-    "https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/heatmap_data.csv",
-    function (data) {
-      svg
-        .selectAll()
-        .data(data, function (d) {
-          return d.group + ":" + d.variable;
-        })
-        .enter()
-        .append("rect")
-        .attr("x", function (d) {
-          return x(d.group);
-        })
-        .attr("y", function (d) {
-          return y(d.variable);
-        })
-        .attr("width", x.bandwidth())
-        .attr("height", y.bandwidth())
-        .style("fill", function (d) {
-          return myColor(d.value);
-        });
-    }
-  );
+    // Add the axes
+    var xScale = d3.scaleBand().range([0, width]).domain(years).padding(0.01);
+    var yScale = d3
+      .scaleBand()
+      .range([0, height])
+      .domain(countries)
+      .padding(0.01);
+    var xAxis = d3.axisBottom(xScale);
+    var yAxis = d3.axisLeft(yScale);
+    svg
+      .append("g")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
+    svg.append("g").call(yAxis);
+  });
 </script>
