Color by region added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<input type="checkbox" name="options" autocomplete="off" onchange="updateColorYear()">Color by Year
 		</label>
 		<label class="btn btn-secondary"  data-type="states">
-			<input type="checkbox" name="options" autocomplete="off">Color by Region
+			<input type="checkbox" name="options" autocomplete="off" onchange="updateRegionColor()">Color by Region
 		</label>
 	</div>
 	<div id="main">
