--- a/heatmapcopy.html
+++ b/heatmapcopy.html
@@ -127,6 +127,8 @@
         allDensity.push({ key: key, density: density });
       }
 
+      console.log(allDensity);
+
       // Add areas
       var myCurves = svg
         .selectAll("areas")
