--- a/areachart.html
+++ b/areachart.html
@@ -18,15 +18,18 @@
 <body>
   <label for="column-select">Category</label>
   <select id="column-select">
-    <option value="gdp">GDP ($ USD billions PPP)</option>
-    <option value="gdp-per-capita">GDP per capita in $ (PPP)</option>
-    <option value="iso-code">ISO Country code</option>
-    <option value="military-spending">Military Spending as % of GDP</option>
-    <option value="health-expenditure-gdp">Health Expenditure % of GDP</option>
-    <option value="health-expenditure-per-person">
+    <option value="GDP ($ USD billions PPP)">GDP ($ USD billions PPP)</option>
+    <option value="GDP per capita in $ (PPP)">GDP per capita in $ (PPP)</option>
+    <option value="Military Spending as % of GDP">
+      Military Spending as % of GDP
+    </option>
+    <option value="health expenditure % of GDP">
+      Health Expenditure % of GDP
+    </option>
+    <option value="health expenditure per person">
       Health Expenditure per person
     </option>
-    <option value="unemployment">Unemployment (%)</option>
+    <option value="unemployment (%)">Unemployment (%)</option>
   </select>
 </body>
 
@@ -51,18 +54,6 @@
   //read data
   var column = "Military Spending as % of GDP";
 
-  // Add event listener to the dropdown
-  d3.select("#column-select").on("change", function () {
-    // Retrieve the selected value
-    var selectedValue = d3.select(this).property("value");
-
-    // Update the column variable
-    column = selectedValue;
-
-    // Update the graph with the new column
-    updateGraph();
-  });
-
   d3.csv("CLEANED_assignment_3_dataset.csv", function (data) {
     var years = Array.from(
       new Set(
@@ -71,6 +62,18 @@
         })
       )
     );
+
+    // Add event listener to the dropdown
+    d3.select("#column-select").on("change", function () {
+      // Retrieve the selected value
+      var selectedValue = d3.select(this).property("value");
+
+      // Update the column variable
+      column = selectedValue;
+
+      // Update the graph with the new column
+      updateGraph();
+    });
 
     var countries = Array.from(
       new Set(
@@ -157,6 +160,52 @@
         .duration(transitionDuration)
         .attr("opacity", 1); // Set the final opacity to 1
     });
+
+    function updateGraph() {
+      // Retrieve the selected value from the dropdown
+      var selectedValue = d3.select("#column-select").property("value");
+      console.log(selectedValue);
+
+      d3.selectAll("path").remove();
+
+      // Update the column variable
+      column = selectedValue;
+
+      // Iterate through every country
+      countries.forEach(function (country) {
+        // Normalize the data for the specified country and column for each year
+        var normalizedData = years.map(function (year) {
+          return normalizeData(data, year, column).find(function (d) {
+            return d.Country === country;
+          });
+        });
+
+        // Define the area function
+        var area = d3
+          .area()
+          .x(function (d) {
+            return x(d.Year);
+          })
+          .y0(function (d) {
+            return y(d.Country) + y.bandwidth() / 2;
+          })
+          .y1(function (d) {
+            return y(d.Country) + y.bandwidth() / 2 - radius(d.Value);
+          })
+          .curve(d3.curveMonotoneX);
+
+        // Draw the area using the normalized data points for the current country
+        svg
+          .append("path")
+          .datum(normalizedData)
+          .attr("fill", myColor(Math.random() * 100))
+          .attr("opacity", initialOpacity) // Set the initial opacity to 0
+          .attr("d", area)
+          .transition() // Add a transition to animate the drawing of the area
+          .duration(transitionDuration)
+          .attr("opacity", 1); // Set the final opacity to 1
+      });
+    }
   });
 
   function normalizeData(data, year, column) {
@@ -188,9 +237,5 @@
       });
 
     return normalizedData;
-  }
-  function updateGraph() {
-    // Retrieve the selected value
-    var selectedValue = d3.select("#column-select").property("value");
   }
 </script>
